--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
       position: relative;
       z-index: 1;
       background: transparent;
-      padding: 48px 64px;
-      max-width: 560px;
+      padding: clamp(24px, 5vw, 48px) clamp(32px, 6vw, 64px);
+      max-width: min(560px, 92vw);
       width: 90%;
       text-align: center;
-      min-height: 400px;
+      min-height: min(400px, 70vh);
     }
 
     .cute-row {
@@ -164,16 +164,16 @@
 
     .question {
       font-family: 'Great Vibes', cursive;
-      font-size: 2.75rem;
+      font-size: clamp(1.75rem, 4vw, 2.75rem);
       font-weight: 700;
       color: #c2185b;
       line-height: 1.4;
-      margin-bottom: 32px;
+      margin-bottom: clamp(20px, 3vw, 32px);
     }
 
     .gift-image-wrap {
-      width: 560px;
-      height: 380px;
+      width: min(560px, 90vw);
+      height: min(380px, 50vh);
       display: flex;
       align-items: center;
       justify-content: center;
@@ -206,10 +206,10 @@
       justify-content: center;
       flex-direction: row;
       flex-wrap: nowrap;
-      gap: 24px;
+      gap: clamp(16px, 3vw, 24px);
       position: relative;
-      min-height: 100px;
-      max-width: 560px;
+      min-height: 80px;
+      max-width: min(560px, 92vw);
       margin: 0 auto;
     }
 
@@ -223,8 +223,8 @@
       background: linear-gradient(145deg, #f8bbd9, #f48fb1);
       color: #880e4f;
       border: 2px solid #e91e63;
-      padding: 16px 48px;
-      min-width: 250px;
+      padding: clamp(12px, 2vw, 16px) clamp(32px, 5vw, 48px);
+      min-width: min(250px, 40vw);
       font-size: 1.1rem;
       font-weight: 700;
       border-radius: 16px;
@@ -260,8 +260,8 @@
       background: linear-gradient(145deg, #f8bbd9, #f48fb1);
       color: #880e4f;
       border: 2px solid #e91e63;
-      padding: 16px 48px;
-      min-width: 250px;
+      padding: clamp(12px, 2vw, 16px) clamp(32px, 5vw, 48px);
+      min-width: min(250px, 40vw);
       font-size: 1.1rem;
       font-weight: 700;
       border-radius: 16px;
@@ -394,7 +394,7 @@
 
     .letter-scroll {
       width: min(620px, 94vw);
-      max-height: 80vh;
+      max-height: 85vh;
       overflow-y: auto;
       padding: 48px 40px 56px;
       background: linear-gradient(180deg, #fce4ec 0%, #f8bbd9 15%, #fce4ec 50%, #f8bbd9 85%, #fce4ec 100%);
@@ -578,6 +578,54 @@
     .heart-spray-item:nth-child(46) { --dx: 280px; --dy: -340px; animation-delay: 0.12s; }
     .heart-spray-item:nth-child(47) { --dx: -360px; --dy: 120px; animation-delay: 0.08s; }
     .heart-spray-item:nth-child(48) { --dx: 0px; --dy: 450px; animation-delay: 0.04s; }
+
+    /* Responsive: auto-adjust to screen size */
+    @media (max-width: 1024px) {
+      .card { padding: 32px 40px; max-width: 95vw; }
+      .question { font-size: clamp(1.5rem, 5vw, 2.25rem); }
+      .gift-image-wrap { width: min(480px, 88vw); height: min(320px, 45vh); }
+      .success-page .gift-image-wrap { width: min(440px, 88vw); height: min(360px, 48vh); }
+      .letter-scroll { width: min(540px, 95vw); padding: 40px 32px 56px; }
+      .deco-balloon { width: min(200px, 35vw); height: 50vh; top: 32px; }
+      .deco-valentines-day { width: min(160px, 40vw); }
+      .heart-float, .heart-full { font-size: clamp(1.2rem, 2.5vw, 1.8rem); }
+    }
+
+    @media (max-width: 768px) {
+      .card { padding: 24px 28px; max-width: 96vw; min-height: auto; }
+      .question { font-size: clamp(1.35rem, 5.5vw, 1.9rem); margin-bottom: 20px; }
+      .gift-image-wrap { width: 92vw; height: min(280px, 42vh); }
+      .cute-row { margin-bottom: 16px; }
+      .buttons-wrap { flex-wrap: wrap; gap: 16px; max-width: 96vw; min-height: 70px; }
+      .btn-yes, .btn-no { min-width: min(200px, 70vw); font-size: 1rem; padding: 12px 32px; }
+      .success-page { padding: 16px; transform: translateX(-20px); }
+      .success-page .gift-image-wrap { width: 92vw; height: min(300px, 45vh); }
+      .success-page .question { font-size: clamp(1.4rem, 5vw, 2rem); }
+      .success-page .success-text-wrap { width: 92vw; max-width: 92vw; }
+      .amazing-btn { padding: 12px 20px; font-size: 0.95rem; margin-top: 16px; }
+      .letter-scroll { width: 96vw; padding: 36px 24px 56px; max-height: 88vh; }
+      .amazing-list { font-size: clamp(1.2rem, 4vw, 1.5rem); }
+      .amazing-closing-intro { font-size: clamp(1.4rem, 4.5vw, 1.7rem); }
+      .amazing-closing-bold { font-size: clamp(1.8rem, 5vw, 2.2rem); }
+      .deco-balloon { width: min(160px, 38vw); height: 45vh; top: 24px; left: 16px; }
+      .deco-valentines-day { width: min(140px, 42vw); top: 16px; right: 16px; }
+      .heart-float, .heart-full { font-size: clamp(1rem, 2.2vw, 1.5rem); }
+    }
+
+    @media (max-width: 480px) {
+      .card { padding: 20px 20px; width: 98%; }
+      .question { font-size: 1.35rem; }
+      .gift-image-wrap { width: 96vw; height: min(240px, 38vh); }
+      .buttons-wrap { gap: 12px; }
+      .btn-yes, .btn-no { min-width: 140px; padding: 10px 24px; font-size: 0.95rem; }
+      .success-page .gift-image-wrap { width: 96vw; height: min(260px, 42vh); }
+      .letter-scroll { width: 98vw; padding: 28px 20px 48px; }
+      .amazing-list { font-size: 1.15rem; line-height: 1.8; }
+      .amazing-closing-intro { font-size: 1.35rem; }
+      .amazing-closing-bold { font-size: 1.75rem; }
+      .deco-balloon { width: 120px; height: 40vh; top: 16px; left: 12px; }
+      .deco-valentines-day { width: 100px; top: 12px; right: 12px; }
+    }
   </style>
 </head>
 <body>
